bug 487515 - PRMJ_Now needs better granularity for panning in fennec r=crowder, robarnold